Open packages needed for Projector to work
GitOrigin-RevId: a1bc05eb9053dcf606780f9a05b484fd76031f0a